--- a/app/views/authors/home.html.erb
+++ b/app/views/authors/home.html.erb
@@ -1,10 +1,6 @@
-<div class="d-flex justify-content-center align-items-center", style="min-height: 10vh">
+<div class="d-flex flex-column justify-content-center align-items-center">
 <h1> Welcome To Reading House </h1>
-</div>
 <br />
-<div class="d-flex justify-content-center align-items-center", style="height: 70vh">
-
-
-<img src="http://krls.org/wp-content/uploads/2017/06/dreamstime_s_27191278-cloud-library.jpg">
+<img src="http://krls.org/wp-content/uploads/2017/06/dreamstime_s_27191278-cloud-library.jpg" style="width: 49%;">
 </div>
 
